# rust_telegram_bot

./: .gitignore  Cargo.toml  README.md
src/: ext.rs  lib.rs  telegram.rs
src/ext/: context.rs  filters.rs  mod.rs  updater.rs
src/telegram/: bot.rs  types.rs
tests/: test_tg.rs
