[package]
name = "rust_telegram_bot"
version = "0.0.1"
edition = "2021"
description = "TelegramBot API implementation"
repository = "https://github.com/NeverDieOne/rust_telegram_bot"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.107"
